p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld1
spec:
  selector:
    matchLabels:
      app: helloworld1
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: helloworld1
    spec:
      containers:
      - name: helloworld1
        image: karthequian/helloworld:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: clusterip1
spec:
  type: ClusterIP
  selector:
    app: helloworld1
  ports:
    - port: 8080        # Les autres services du cluster utilisent ce port
      targetPort: 80    # Le port de nginx dans le conteneur
