p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld2
spec:
  selector:
    matchLabels:
      app: helloworld2
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: helloworld2
    spec:
      containers:
      - name: helloworld2
        image: nginxdemos/hello
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld2
spec:
  type: NodePort
  selector:
    app: helloworld2
  ports:
    - port: 8080        # Les autres services du cluster utilisent ce port
      targetPort: 80    # Le port de nginx dans le conteneur
      nodePort: 30081
