p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld3
spec:
  selector:
    matchLabels:
      app: helloworld3
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld3
    spec:
      containers:
      - name: helloworld3
        image: jfxs/hello-world
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: clusterip3
spec:
  type: ClusterIP
  selector:
    app: helloworld3
  ports:
    - port: 8080
      targetPort: 8080
